[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
cog_core = { path = "../core" }
crossterm = "0.28.1"
env_logger = "0.11.6"
eyre = "0.6.12"
hecs = "0.10.5"
log = "0.4.26"
ndarray = "0.16.1"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
topological-sort = "0.2.2"
